--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     label { font-size: 20px; color:#111; }
 
     .input {
+      width: 60px;
       height: 60px;
       font-size: 20px;
       padding: 0 16px;
