--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <option value="미완">미완</option>
       </select>
 
-      <label>다음 점검일</label>
+      <label>점검 완료일 </label>
       <input id="i_next" class="input" type="date" />
 
       <!-- ✅ 코멘트 → 비고 -->
