--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="form-grid">
       <label>크레인 번호</label>
       <div>
-        <input id="i_crane_no" class="input" placeholder="소형: 숫자만 입력 가능 (예: 14) / 타워: TC-붙여서 입력 (예: TC-014)" />
+        <input id="i_crane_no" class="input input-wide" placeholder="소형: 숫자만 입력 가능 (예: 14) / 타워: TC-붙여서 입력 (예: TC-014)" />
         <div class="hint">※ 소형은 숫자만 치면 C- 자동 / 타워는 충돌방지로 TC- 붙여서 입력</div>
       </div>
 
@@ -191,7 +191,7 @@
       <!-- ✅ 코멘트 → 비고 -->
       <label>비고 입력</label>
       <div>
-        <textarea id="i_comment" class="input" placeholder="비고 입력 (엔터 가능)&#10;예) MC 교체 필요&#10;예) 차단기 불량"></textarea>
+        <textarea id="i_comment" class="input input-wide" placeholder="비고 입력 (엔터 가능)&#10;예) MC 교체 필요&#10;예) 차단기 불량"></textarea>
         <div class="hint">※ 여기 입력한 비고는 저장 시 비고리스트(remarks)에 같이 저장됨</div>
       </div>
     </div>
