--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
       .dash { grid-template-columns: repeat(2, 1fr); }
       .form-grid { grid-template-columns: 1fr; }
       .topbar img { height: 44px; }
-      .topbar .title { font-size: 26px; }
+      .topbar .title { font-size: 26px; }/* ✅ PATCH: 메인 입력 2열짜리 “가로 확장” (태그가 input이든 textarea든 상관없음) */
+.input { width: 100%; box-sizing: border-box; }
+
+.input-wide {
+  grid-column: 2 / -1;   /* 라벨 오른쪽 입력칸 전체폭 */
+  width: 100%;
+}      
     }
   </style>
 </head>
