--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #e9ecef; /* ✅ 회색톤 */
-      color: #111;
+      background: #0e0e11;
+      color: #fff;
     }
 
-    /* ===== TOPBAR (PC/모바일 공통) ===== */
+    /* ===== TOPBAR (PC / 모바일 공통 안정 구조) ===== */
     .topbar {
       position: relative;
       background: #ff8a00;
@@ -25,7 +25,12 @@
       align-items: center;
       justify-content: space-between;
     }
-    .topbar img { height: 56px; object-fit: contain; }
+
+    .topbar img {
+      height: 56px;
+      object-fit: contain;
+    }
+
     .topbar .title {
       position: absolute;
       left: 50%;
@@ -44,19 +49,16 @@
     }
 
     .card {
-      background: #f8f9fa;          /* ✅ 밝은 회색 카드 */
-      border: 1px solid #d0d4d9;
+      background: #1a1a22;
       border-radius: 16px;
       padding: 28px;
       margin-bottom: 28px;
-      box-shadow: 0 6px 18px rgba(0,0,0,.08);
     }
 
     h2 {
       margin-top: 0;
       margin-bottom: 24px;
       font-size: 28px;
-      color: #111;
     }
 
     /* ===== 대시보드 ===== */
@@ -67,13 +69,11 @@
     }
 
     .dash-item {
-      background: #ffffff;
-      border: 1px solid #d0d4d9;
+      background: #111;
       border-radius: 14px;
       padding: 24px;
       text-align: center;
-      font-size: 20px;
-      color: #111;
+      font-size: 22px;
     }
 
     .dash-item span {
@@ -87,41 +87,46 @@
     /* ===== 입력 폼 ===== */
     .form-grid {
       display: grid;
-      grid-template-columns: 180px 1fr;
+
+      /* ✅ PATCH: 라벨 폭을 줄여서 입력칸(2열) 가로를 더 확보 */
+      grid-template-columns: 140px minmax(0, 1fr);
+
       gap: 20px 18px;
-      align-items: start;
+      align-items: center;
       margin-bottom: 28px;
     }
 
-    label { font-size: 20px; color:#111; }
+    label {
+      font-size: 20px;
+    }
 
     .input {
       height: 60px;
       font-size: 20px;
       padding: 0 16px;
       border-radius: 10px;
-      border: 1px solid #cfd4da;
-      background: #fff;
-      color: #111;
+      border: none;
+
+      /* ✅ PATCH: hcms.css에서 width 잡아도 이걸로 이김 */
+      width: 100% !important;
       box-sizing: border-box;
+      min-width: 0;
     }
 
-    /* ✅ 비고 입력칸(엔터 가능) */
-    textarea.input {
-      height: 140px;          /* 🔥 크게 */
-      padding: 14px 16px;
-      resize: vertical;
-      line-height: 1.4;
-    }
-
-    .hint {
-      margin-top: 8px;
-      font-size: 14px;
-      color: #555;
+    /* ✅ PATCH: “크레인번호/비고”만 더 넓게 보이도록(가로 공간 확보 + 충돌 방지) */
+    #i_crane_no,
+    #i_comment {
+      width: 100% !important;
+      min-width: 0;
     }
 
     /* ===== 버튼 ===== */
-    .btn-row { display: flex; gap: 24px; flex-wrap: wrap; }
+    .btn-row {
+      display: flex;
+      gap: 24px;
+      flex-wrap: wrap;
+    }
+
     .btn {
       height: 68px;
       padding: 0 36px;
@@ -133,20 +138,29 @@
       background: #ff8a00;
       color: #000;
     }
-    .btn.warn { background: #ff4444; color: #fff; }
+
+    .btn.warn {
+      background: #ff4444;
+      color: #fff;
+    }
 
     /* ===== 반응형 ===== */
     @media (max-width: 900px) {
-      .dash { grid-template-columns: repeat(2, 1fr); }
-      .form-grid { grid-template-columns: 1fr; }
-      .topbar img { height: 44px; }
-      .topbar .title { font-size: 26px; }/* ✅ PATCH: 메인 입력 2열짜리 “가로 확장” (태그가 input이든 textarea든 상관없음) */
-.input { width: 100%; box-sizing: border-box; }
+      .dash {
+        grid-template-columns: repeat(2, 1fr);
+      }
 
-.input-wide {
-  grid-column: 2 / -1;   /* 라벨 오른쪽 입력칸 전체폭 */
-  width: 100%;
-}      
+      .form-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .topbar img {
+        height: 44px;
+      }
+
+      .topbar .title {
+        font-size: 26px;
+      }
     }
   </style>
 </head>
@@ -179,10 +193,7 @@
 
     <div class="form-grid">
       <label>크레인 번호</label>
-      <div>
-        <input id="i_crane_no" class="input input-wide" placeholder="소형: 숫자만 입력 가능 (예: 14) / 타워: TC-붙여서 입력 (예: TC-014)" />
-        <div class="hint">※ 소형은 숫자만 치면 C- 자동 / 타워는 충돌방지로 TC- 붙여서 입력</div>
-      </div>
+      <input id="i_crane_no" class="input" placeholder="예: C-014" />
 
       <label>결과</label>
       <select id="i_result" class="input">
@@ -191,15 +202,11 @@
         <option value="미완">미완</option>
       </select>
 
-      <label>점검 완료일 </label>
+      <label>다음 점검일</label>
       <input id="i_next" class="input" type="date" />
 
-      <!-- ✅ 코멘트 → 비고 -->
-      <label>비고 입력</label>
-      <div>
-        <textarea id="i_comment" class="input input-wide" placeholder="비고 입력 (엔터 가능)&#10;예) MC 교체 필요&#10;예) 차단기 불량"></textarea>
-        <div class="hint">※ 여기 입력한 비고는 저장 시 비고리스트(remarks)에 같이 저장됨</div>
-      </div>
+      <label>비고</label>
+      <input id="i_comment" class="input" placeholder="비고" />
     </div>
 
     <div class="btn-row">
@@ -230,7 +237,7 @@
     <h2>리스트</h2>
     <div class="btn-row">
       <button class="btn" onclick="openCraneList()">소형크레인 리스트</button>
-      <button class="btn" onclick="openTowerCraneList()">타워크레인</button>
+      <button class="btn" onclick="openTowerCraneList()">타워크레인 리스트</button>
       <button class="btn" onclick="openRemarkList()">비고 리스트</button>
       <button class="btn" onclick="openHoldList()">보류 리스트</button>
     </div>
